--- a/personal.html
+++ b/personal.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="favicon.ico">
-	<link rel="stylesheet" href="html5reset.css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="icon" href="imgs/favicon.ico">
+	<link rel="stylesheet" href="css/html5reset.css">
+	<link rel="stylesheet" href="css/style.css">
 	<title>Family</title>
 </head>
 <body>
@@ -18,20 +18,21 @@
 			<li><a href = "http://www.si.umich.edu">UMSI</a></li>
 		</ul>
 	</nav>
+	    
+	<h1>Family Page</h1>
+	
 	</header>
 
-    
-	<h1>Family Page</h1>
 
 
 	
 	<main>
 		
 	<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.<p>
-		<img src = "wisconsin_dells.jpg" alt= "wiscodells" width="25"/>
-		<img src = "badlands.jpg" alt= "visitor sign" width="1000"/>
-		<img src= "falling.jpg" alt= "kid falling" width="25"/>
-		<img src = "jewel_cave.jpg" alt= "three kids at jewel cave" width="1000"/>
+		<img src = "imgs/wisconsin_dells.jpg" alt= "wiscodells" width="25"/>
+		<img src = "imgs/badlands.jpg" alt= "visitor sign" width="1000"/>
+		<img src = "imgs/falling.jpg" alt= "kid falling" width="25"/>
+		<img src = "imgs/jewel_cave.JPG" alt= "three kids at jewel cave" width="1000"/>
 	</main>
 	<footer>
 		<p>Colleen van Lent &copy; 2020</p>
