--- a/random.html
+++ b/random.html
@@ -6,7 +6,7 @@
 	the console. -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="imgs/favicon">
+	<link rel="icon" href="imgs/favicon.ico">
 	<link rel="stylesheet" href="css/html5reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<title>Random</title>
@@ -24,7 +24,7 @@
 			</ul>
 		</nav>
 
-	<h2>Random Page</h2>
+	<h1>Random Page</h1>
     </header>
 
 	<main>
@@ -36,7 +36,7 @@
     </main>
 
 	<footer>
-		<p>Colleen van Lent copy 2020</p>
+		<p>Colleen van Lent &copy; 2020</p>
 	</footer>
 </body>
 </html>
