--- a/personal.html
+++ b/personal.html
@@ -6,7 +6,7 @@
 	<link rel="icon" href="imgs/favicon.ico">
 	<link rel="stylesheet" href="css/html5reset.css">
 	<link rel="stylesheet" href="css/style.css">
-	<title>Family</title>
+	<title>Family Page</title>
 </head>
 <body>
 	<header>
@@ -17,9 +17,9 @@
 			<li><a href = "random.html">Random</a></li>
 			<li><a href = "http://www.si.umich.edu">UMSI</a></li>
 		</ul>
-	</nav>
+	  </nav>
 	    
-	<h1>Family Page</h1>
+	<h1>Family</h1>
 	
 	</header>
 
